syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTPeerRequestHistory";
option optimize_for = LITE_RUNTIME;

import public "PeerEnums.proto";
import public "PeerRequestWorkflow.proto";

message PeerRequestHistory
{
    optional uint32 version = 1;
    optional PeerRequestType type = 2;
    repeated PeerRequestWorkflow workflow = 3;
}
